--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*!--------RESET-----------!*/
+/*!----------RESET-----------*/
 *{
     margin: 0;
     padding: 0;
@@ -6,9 +6,15 @@
     font-family: 'Nue Gothic', sans-serif;;
 }
 
-/*!---------Header----------!*/
+/*!---------HEADER----------*/
 header{
     background-color: black;
+}
+
+header nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h1{
@@ -19,9 +25,17 @@ header h1{
 
 header nav ul{
     list-style: none;
+    display: flex;
+    padding: 10px;
+}
+
+header nav ul li{
+    justify-content: space-evenly;
+    padding: 8px;
 }
 
 header nav ul li a{
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
