fix: fixed padding.

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ header nav{
 header h1{
     font-size: 65px;
     color: white;
-    padding: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
 }
 
 header nav ul{
@@ -31,11 +32,11 @@ header nav ul{
 
 header nav ul li{
     justify-content: space-evenly;
-    padding: 8px;
+    padding-right: 8px;
 }
 
 header nav ul li a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 25px;
 }
