--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,31 @@ header nav ul li a{
 }
 
 /*!---------HERO----------*/
+.hero{
+    text-align: center;
+    width: 100%;
+    height: 400px;
+    background: url("../img/background-hero.jpeg") no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: white;
+}
+
+.hero h2{
+    font-size: 70px;
+    padding: 15px;
+}
+
+.hero p{
+    margin: 25px;
+    font-size: 25px;
+   padding: 10px 50px 10px 50px;
+}
+
+.hero a{
+    text-decoration: none;
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    font-size: 25px;
+}
