--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,13 @@ header nav ul li a{
 
 .hero h2{
     font-size: 70px;
-    padding: 15px;
+    padding-top: 15px;
 }
 
 .hero p{
     margin: 25px;
     font-size: 25px;
-   padding: 10px 50px 10px 50px;
+   padding: 0px 50px 10px 50px;
 }
 
 .hero a{
@@ -69,4 +69,5 @@ header nav ul li a{
     color: white;
     padding: 10px 15px;
     font-size: 25px;
+    
 }
