feat: import font to css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/*!-------FONTS-----*/
+@import url('https://fonts.cdnfonts.com/css/nue-gothic');
+
 /*!----------RESET-----------*/
 *{
     margin: 0;
