--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*!-------FONTS-----*/
+/*!---------FONTS----------*/
 @import url('https://fonts.cdnfonts.com/css/nue-gothic');
 
 /*!----------RESET-----------*/
@@ -72,5 +72,6 @@ header nav ul li a{
     color: white;
     padding: 10px 15px;
     font-size: 25px;
-    
 }
+
+/*!---------FOOTER----------*/
