feat: added style to footer.

--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,28 @@ header nav ul li a{
 }
 
 /*!---------FOOTER----------*/
+footer{
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer div{
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer i{
+    font-size: 32px;
+    justify-content: space-evenly;
+    padding: 8px;
+}
+
+footer div p{
+    color: white;
+}
+
+footer img{
+    width: 8%;
+}
