feat: added base structure and style to section.

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,8 @@ header nav ul li a{
     padding: 10px 15px;
     font-size: 25px;
 }
+/*!---------PRODUCTS SECTION----------*/
+
 
 /*!---------FOOTER----------*/
 footer{
