--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,15 @@ header nav ul li a{
     font-size: 25px;
 }
 /*!---------PRODUCTS SECTION----------*/
+.products{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
+.products h2{
+    text-align: center;
+    size: 45px;
+}
 
 /*!---------FOOTER----------*/
 footer{
