fix: fixed font size to products title

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header nav ul li a{
 
 .products h2{
     text-align: center;
-    size: 45px;
+    font-size: 45px;
 }
 
 /*!---------FOOTER----------*/
