added styles to contact form

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,6 @@
+//Variables
+@import "variables";
+
 //Global
 @import "global";
 
@@ -6,6 +9,9 @@
 
 //Index
 @import "index";
+
+//Contacto
+@import "contact";
 
 //Footer
 @import "footer";
