--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,6 +56,60 @@ nav {
   .instagram img {
     width: 80%; }
 
+#contacto .form-container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 15px auto;
+  padding: 6em 0 1em; }
+  #contacto .form-container .form-container__title {
+    text-align: center; }
+    #contacto .form-container .form-container__title h1 {
+      font-size: 2.5rem;
+      font-weight: 800; }
+  #contacto .form-container .form-container__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 1em auto; }
+    #contacto .form-container .form-container__form input, #contacto .form-container .form-container__form select, #contacto .form-container .form-container__form textarea {
+      width: 100%;
+      margin-bottom: 2em;
+      font-family: inherit; }
+    #contacto .form-container .form-container__form input[type="text"],
+    #contacto .form-container .form-container__form input[type="mail"],
+    #contacto .form-container .form-container__form textarea {
+      overflow: hidden;
+      padding: 1em 1em .5em 0;
+      background: none;
+      border: none;
+      border-bottom: 1px solid black;
+      text-align: left;
+      font-size: 0.72727rem; }
+    #contacto .form-container .form-container__form select {
+      padding: .5em;
+      background: none;
+      border: 1px solid black; }
+      #contacto .form-container .form-container__form select option {
+        text-align: center; }
+    #contacto .form-container .form-container__form textarea {
+      resize: none;
+      width: 100%;
+      height: 3em; }
+    #contacto .form-container .form-container__form input[type="submit"] {
+      width: 50%;
+      padding: .7em 1em;
+      font-size: 0.96rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      background: black;
+      border: none;
+      cursor: pointer;
+      color: #f1f1f1; }
+
 footer {
   background-color: black;
   display: flex;
