added new variables

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,3 +13,7 @@ $lightgold: #DDA15E;
 $lightblack: #111111;
 $whitecustom: #f1f1f1;
 $black: black;
+
+// Sombras
+
+$food-shadow: 0px 8px 24px 5px rgba(0,0,0,0.45);
